external-crates/move/crates/move-compiler/tests/development/signed_ints/valid/signed_int_constants.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E04012]: invalid type for constant
   ┌─ tests/development/signed_ints/valid/signed_int_constants.move:10:19
   │
10 │     const C_I256: i256 = 1000000000000i256;
   │                   ^^^^
   │                   │
   │                   Unpermitted constant type
   │                   Found: 'i256'. But expected one of: 'u8', 'u16', 'u32', 'u64', 'u128', 'u256', 'i8', 'i16', 'i32', 'i64', 'i128', 'bool', 'address', 'vector<_>'
